apps/dashboard/resource-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "6"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"resource-api","namespace":"dashboard"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"resource-api"}},"template":{"metadata":{"labels":{"app":"resource-api"}},"spec":{"containers":[{"args":["pip install flask flask-cors kubernetes \u0026\u0026\npython /app/app.py\n"],"command":["/bin/sh","-c"],"image":"python:3.9-slim","name":"python-api","ports":[{"containerPort":5000}],"volumeMounts":[{"mountPath":"/ [...]
  creationTimestamp: "2026-01-03T00:49:36Z"
  generation: 6
  name: resource-api
  namespace: dashboard
  resourceVersion: "9288194"
  uid: a2ffd11a-343a-46f5-a2f7-476c4a864605
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: resource-api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-01-10T20:19:40Z"
      creationTimestamp: null
      labels:
        app: resource-api
    spec:
      containers:
      - args:
        - |
          pip install flask flask-cors kubernetes &&
          python /app/app.py
        command:
        - /bin/sh
        - -c
        image: python:3.9-slim
        imagePullPolicy: IfNotPresent
        name: python-api
        ports:
        - containerPort: 5000
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 128Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /app
          name: api-script
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: dashboard-sa
      serviceAccountName: dashboard-sa
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: api-python-script
        name: api-script
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-01-23T23:20:42Z"
    lastUpdateTime: "2026-01-23T23:20:42Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2026-01-03T00:49:37Z"
    lastUpdateTime: "2026-01-23T23:20:42Z"
    message: ReplicaSet "resource-api-9f7cff49d" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 6
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
