apps/dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: dashboard
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - dash.alphonzojonesjr.com
    secretName: dash-alphonzojonesjr-com-tls
  rules:
  - host: dash.alphonzojonesjr.com
    http:
      paths:
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: resource-api
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dashboard
            port:
              number: 80
